# textindex_ply

./: .gitignore  .output.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.ai/: ChatGPT.md  aiGuidelines.md
.junie/: guidelines.md
src/textindex_ply/: __init__.py  ast.py  cli.py  errors.py  index_builder.py  lexer.py  parser.py  utils.py
src/textindex_ply/data/: __init__.py
tests/: conftest.py  test_directive_args.py  test_index_builder.py  test_lexer.py  test_parser.py
