[project]
name = "textindex-ply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Cummings", email = "mgcummings@yahoo.com" }
]
requires-python = ">=3.13.5"
dependencies = []

[project.scripts]
textindex-ply = "textindex_ply:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
