[project]
name = "textindex-ply"
version = "0.1.0"
description = "A simple, lightweight syntax for creating indexes in text documents using ply."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.md"]
authors = [
    { name = "Michael Cummings", email = "mgcummings@yahoo.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: Markdown"
]
dependencies = [
    "ply>=3.11",
]

[project.scripts]
textindex-ply = "textindex_ply.cli:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyfakefs>=5.10.0",
    "pylint>=3.3.9",
    "pylint-per-file-ignores>=2.0.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "xdoctest>=1.3.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-branch",
    "--cov-report=term",
    "--cov-report=xml:coverage.xml",
    "--doctest-modules",
    "--xdoctest",
    "-vvv"
]
testpaths = [
    "src/textindex_ply/",
    "tests/"
]

[tool.coverage.run]
omit = [
    ".venv/*",
    "example/*",
    "tests/*",
]

[tool.pylint]
allow-wildcard-with-all = true
good-names = ["_", "__", "db", "e", "ex", "f", "i", "j", "k", "s", "ui"]
ignore = ["_dev", "example"]
include-naming-hint = true
jobs = 0
max-args = 6
output-format = "github"
overgeneral-exceptions = ["builtins.Exception"]

[tool.pylint.main]
load-plugins = [
    "pylint_per_file_ignores"
]

[tool.pylint."MESSAGES CONTROL"]
per-file-ignores = [
    "test/*:D100,F841",
    "lexer.py:D300,D415F841,N806"
]

[tool.ruff]
fix = true
line-length = 80
output-format = "grouped"
required-version = ">=0.13.0,<1.0"
src = ["src/*", "tests/*"]
target-version = "py312"
exclude = [
    "tests/*"
]

[tool.ruff.format]
docstring-code-format = true
exclude = ["*.pyi"]

[tool.ruff.lint]
extend-select = ["D", "E", "I", "N", "R", "W"]
ignore = ["D105", "D205"]

[tool.ruff.lint.pep8-naming]
#extend-ignore-names = ["Err", "NONE", "Ok", "Some"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D103", "D100", "F841", "N802", "N806"]
"lexer.py" = ["D300", "D415", "F841", "N802", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"
